--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,11 @@ project(spbu_2020_c_homeworks C)
 set(CMAKE_C_STANDARD 11)
 
 set(SOURCE_LIB
-    library/commonUtils/numericOperations.c
-)
+        library/commonUtils/numericOperations.c
+        )
 add_library(library ${SOURCE_LIB})
+add_executable(task_1 homework_1/task_1.c)
+add_executable(task_2 homework_1/task_2.c)
+add_executable(task_3 homework_1/task_3.c)
+add_executable(task_4 homework_1/task_4.c)
+add_executable(task_5 homework_1/task_5.c)
