--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,7 @@ project(spbu_2020_c_homeworks C)
 
 set(CMAKE_C_STANDARD 11)
 
-set(SOURCE_LIB
-        library/commonUtils/numericOperations.c
-        )
+set(SOURCE_LIB library/commonUtils/numericOperations.c)
 add_library(library ${SOURCE_LIB})
 add_executable(task_1 homework_1/task_1.c)
 add_executable(task_2 homework_1/task_2.c)
