--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,6 @@ set(CMAKE_C_STANDARD 11)
 set(SOURCE_LIB
     library/commonUtils/numericOperations.c
 )
+set(mem.h)
 add_library(library ${SOURCE_LIB})
 add_executable(task_2.1 homework_2/task_2.1.c)
