--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,3 +16,4 @@ add_executable(task_2.5 homework_2/task_2.5.c)
 add_executable(task_2.4 homework_2/task_2.4.c)
 add_executable(task_2.2 homework_2/task_2.2.c)
 target_link_libraries(task_2.2 m)
+add_executable(task_3.1 homework_3/task_3.1.c ./library/list/list.h ./library/list/list.c)
