--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(spbu_2020_c_homeworks C)
 set(CMAKE_C_STANDARD 11)
 
 set(SOURCE_LIB library/commonUtils/numericOperations.c)
-add_library(library ${SOURCE_LIB})
+add_library(cyclicList STATIC library/list/cyclicList.c)
 add_executable(task_1 homework_1/task_1.c)
 add_executable(task_2 homework_1/task_2.c library/commonUtils/reverseArray.h library/commonUtils/reverseArray.c)
 add_executable(task_3 homework_1/task_3.c)
@@ -17,3 +17,5 @@ add_executable(task_2.4 homework_2/task_2.4.c)
 add_executable(task_2.2 homework_2/task_2.2.c)
 target_link_libraries(task_2.2 m)
 add_executable(task_3.1 homework_3/task_3.1.c ./library/list/list.h ./library/list/list.c)
+add_executable(task_3.2 homework_3/task_3.2.c)
+target_link_libraries(task_3.2 cyclicList)
