--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(spbu_2020_c_homeworks C)
 set(CMAKE_C_STANDARD 11)
 
 set(SOURCE_LIB library/commonUtils/numericOperations.c)
-add_library(library ${SOURCE_LIB})
+add_library(stackd STATIC library/stackd/stackd.c)
 add_executable(task_1 homework_1/task_1.c)
 add_executable(task_2 homework_1/task_2.c library/commonUtils/reverseArray.h library/commonUtils/reverseArray.c)
 add_executable(task_3 homework_1/task_3.c)
@@ -16,3 +16,5 @@ add_executable(task_2.5 homework_2/task_2.5.c)
 add_executable(task_2.4 homework_2/task_2.4.c)
 add_executable(task_2.2 homework_2/task_2.2.c)
 target_link_libraries(task_2.2 m)
+add_executable(task_4.1 homework_4/task_4.1.c)
+target_link_libraries(task_4.1 stackd)
