--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ set(SOURCE_LIB library/commonUtils/numericOperations.c)
 
 add_library(list STATIC library/list/list.c)
 
+add_library(complexNumber library/complexNumber/complexNumber.c)
+
 add_executable(task_1 homework_1/task_1.c)
 add_executable(task_2 homework_1/task_2.c library/commonUtils/reverseArray.h library/commonUtils/reverseArray.c)
 add_executable(task_3 homework_1/task_3.c)
@@ -22,3 +24,5 @@ add_executable(task_3.1 homework_3/task_3.1.c )
 target_link_libraries(task_3.1 list)
 add_executable(task_3.2 homework_3/task_3.2.c)
 target_link_libraries(task_3.2 list)
+add_executable(test_1.2 test_1/test_1.2.c)
+target_link_libraries(test_1.2 complexNumber)
