--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,3 +22,4 @@ add_executable(task_3.1 homework_3/task_3.1.c )
 target_link_libraries(task_3.1 list)
 add_executable(task_3.2 homework_3/task_3.2.c)
 target_link_libraries(task_3.2 list)
+add_executable(test_1.1 test_1/test_1.1.c)
