--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,4 +43,6 @@ add_executable(test_1.2 test_1/test_1.2.c)
 target_link_libraries(test_1.2 complexNumber)
 
 add_executable(task_7.1 homework_7/task_7.1.c)
+add_executable(task_7.2 homework_7/task_7.2.c)
 target_link_libraries(task_7.1 graph)
+target_link_libraries(task_7.2 graph)
