removed two libraries and fixed problems with end of file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,6 @@ add_library(complexNumber library/complexNumber/complexNumber.c)
 add_library(fileProcessing library/fileProcessing/fileProcessing.c)
 add_library(stringManipulations library/stringManipulations/stringManipulations.c)
 target_link_libraries(fileProcessing stringManipulations)
-add_library(hashFunctions library/hashFunctions/hashComputation.c)
-add_library(indexGeneration library/indexGeneration/indexGeneration.c)
 
 add_executable(task_1 homework_1/task_1.c)
 add_executable(task_2 homework_1/task_2.c library/commonUtils/reverseArray.c)
@@ -46,4 +44,4 @@ add_executable(test_1.2 test_1/test_1.2.c)
 target_link_libraries(test_1.2 complexNumber)
 
 add_executable(task_6.1 homework_6/task_6.1.c)
-target_link_libraries(task_6.1 hashTable fileProcessing hashFunctions indexGeneration)
+target_link_libraries(task_6.1 hashTable fileProcessing)
