--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,3 +51,5 @@ target_link_libraries(task_6.1 hashTable fileProcessing)
 
 add_executable(test_2.1 test_2/test_2.1.c)
 add_executable(test_2.2 test_2/test_2.2.c)
+add_executable(test_2.3_new test_2/test_2.3_new.c)
+target_link_libraries(test_2.3_new fileProcessing)
