--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ add_library(complexNumber library/complexNumber/complexNumber.c)
 add_library(fileProcessing library/fileProcessing/fileProcessing.c)
 add_library(stringManipulations library/stringManipulations/stringManipulations.c)
 target_link_libraries(fileProcessing stringManipulations)
+add_library(dfa library/dfa/dfa.c)
 
 add_executable(task_1 homework_1/task_1.c)
 add_executable(task_2 homework_1/task_2.c library/commonUtils/reverseArray.c)
@@ -45,3 +46,6 @@ target_link_libraries(test_1.2 complexNumber)
 
 add_executable(task_6.1 homework_6/task_6.1.c)
 target_link_libraries(task_6.1 hashTable fileProcessing)
+
+add_executable(task_8.1 homework_8/task_8.1.c)
+target_link_libraries(task_8.1 dfa)
