--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ add_library(fileProcessing library/fileProcessing/fileProcessing.c)
 add_library(stringManipulations library/stringManipulations/stringManipulations.c)
 target_link_libraries(fileProcessing stringManipulations)
 add_library(dfa library/dfa/dfa.c)
+add_library(TDArray library/twoDimensionalArray/twoDimensionalArray.c)
 
 add_executable(task_1 homework_1/task_1.c)
 add_executable(task_2 homework_1/task_2.c library/commonUtils/reverseArray.c)
@@ -65,3 +66,6 @@ add_executable(test_2.1 test_2/test_2.1.c)
 add_executable(test_2.2 test_2/test_2.2.c)
 add_executable(test_2.3_new test_2/test_2.3_new.c)
 target_link_libraries(test_2.3_new fileProcessing)
+
+add_executable(test_3.2 test_3/test_3.2.c)
+target_link_libraries(test_3.2 TDArray)
